--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>你好，我是Morgan！</h1>
-    <p>這裡是我的自我介紹。我是一名學生，對畫圖非常感興趣。我喜歡在空閒時間畫圖。</p>
+    <p>這裡是自我介紹。我是一名學生，對畫圖非常感興趣。我喜歡在空閒時間畫圖。</p>
     <h2>我的興趣</h2>
     <ul>
         <li>畫圖</li>
