--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>你好，我是Morgan！</h1>
-    <p>這裡是自我介紹。我是一名學生，對畫圖非常感興趣。我喜歡在空閒時間畫圖。</p>
-    <h2>我的興趣</h2>
-    <ul>
-        <li>畫圖</li>
-    </ul>
-    <p>更多關於我的資訊，請訪問我的<a href="your_social_media_link">社交媒體</a>。</p>
+    <div class="container">
+        <h1>你好，我是Morgan！</h1>
+        <div class="intro">
+            <p>這裡是自我介紹。我是一名學生，對畫圖非常感興趣。我喜歡在空閒時間畫圖。</p>
+            <img src="path_to_your_image/intro_image.jpg" alt="介紹插圖" class="intro-img">
+        </div>
+        <h2>我的興趣</h2>
+        <div class="hobbies">
+            <div class="hobby">
+                <img src="path_to_your_image/drawing_hobby.jpg" alt="畫圖" class="hobby-img">
+                <p>畫圖</p>
+            </div>
+        </div>
+        <p>更多關於我的資訊，請訪問我的<a href="your_social_media_link">社交媒體</a>。</p>
+    </div>
 </body>
 </html>
